schedule a paint when resolution changes
Categories
(Core :: Web Painting, defect)
Tracking
()
People
(Reporter: tnikkel, Assigned: tnikkel)
References
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Surprisingly nothing actually schedules a paint when the resolution changes.
This probably wasn't a problem because when the resolution changes almost certainly something else is changing that causes a paint too (scroll position, display port, etc).
We hit this in the test I wrote for bug 1706868. We double tap zoom in. In the last RequestContentRepaint from apz to content the only thing that changes is the resolution by a small amount. If he scroll offset or display port margins changed we'd ask for a paint, but evidently they do not. Content updates it's resolution, but since it does not generate a paint apz never gets notified about this, so it thinks content has a slightly different resolution.
Then the test starts a double tap zoom out. When it notifies content of the new resolutions APZCCallbackHelper does nothing because of this line
where it detects that the content resolution and what apz thinks is the content resolution differ by too much, so it thinks the request from apz is out of date and ignores it.
| Assignee | ||
Comment 1•4 years ago
|
||
Surprisingly nothing actually schedules a paint when the resolution changes.
This probably wasn't a problem because when the resolution changes almost certainly something else is changing that causes a paint too (scroll position, display port, etc).
We hit this in the test I wrote for bug 1706868. We double tap zoom in. In the last RequestContentRepaint from apz to content the only thing that changes is the resolution by a small amount. If he scroll offset or display port margins changed we'd ask for a paint, but evidently they do not. Content updates it's resolution, but since it does not generate a paint apz never gets notified about this, so it thinks content has a slightly different resolution.
Then the test starts a double tap zoom out. When it notifies content of the new resolutions APZCCallbackHelper does nothing because of this line
where it detects that the content resolution and what apz thinks is the content resolution differ by too much, so it thinks the request from apz is out of date and ignores it.
Updated•4 years ago
|
Comment 3•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 4•4 years ago
|
||
Comment on attachment 9218845 [details]
Bug 1708083. Schedule a paint when the presshell resolution changes. r?mattwoodrow,botond,miko
Beta/Release Uplift Approval Request
- User impact if declined: needed so the test of bug 1706868 doesn't fail sometimes (which is already uplifted, i should have requested uplift already but somehow i missed doing so)
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): asks for repaint when we need to repaint
- String changes made/needed:
Comment 5•4 years ago
|
||
Comment on attachment 9218845 [details]
Bug 1708083. Schedule a paint when the presshell resolution changes. r?mattwoodrow,botond,miko
Fixes a frequently failing test since the uplift of bug 1706868. Approved for 89.0b9.
Comment 6•4 years ago
|
||
| bugherder uplift | ||
Description
•